Implemented user register endpoint and testing.
