# backend/Controllers/user_controller.py
@@ -1,6 +1,9 @@
 from django.contrib.auth import authenticate, login, logout
 from django.http import JsonResponse
 
+from backend.Utils.user_validation import validate_user_data, validate_password
+from backend.models import User
+
 
 def user_login(request):
     """
@@ -19,7 +22,7 @@ def user_login(request):
             return JsonResponse("OK - User logged in.", status=200, safe=False)
         return JsonResponse("Not Found - User not found.", status=404, safe=False)
     return JsonResponse(
-        "Bad Request - Please provide the required body.", status=400, safe=False
+        "Bad Request - Please provide the required json body.", status=400, safe=False
     )
 
 
@@ -31,3 +34,59 @@ def user_logout(request):
     """
     logout(request)
     return JsonResponse("OK - User logged out.", status=200, safe=False)
+
+
+def user_register(request):
+    """
+    Register new user endpoint. User data is validated before creation.
+    :param request: session request.
+    :return: 201 - user created.
+             400 - bad request with description.
+    """
+    if (
+        "email" in request.DATA
+        and "username" in request.DATA
+        and "password" in request.DATA
+        and "first_name" in request.DATA
+        and "last_name" in request.DATA
+        and "is_teacher" in request.DATA
+        and "password_repeat" in request.DATA
+    ):
+
+        # Validate user data.
+        user_validation = validate_user_data(
+            request.DATA["first_name"],
+            request.DATA["last_name"],
+            request.DATA["email"],
+            request.DATA["username"],
+        )
+        if user_validation:
+            return JsonResponse(
+                "Bad Request - " + user_validation, status=400, safe=False
+            )
+
+        # Validate user password.
+        password_validation = validate_password(
+            request.DATA["password"], request.DATA["password_repeat"]
+        )
+        if password_validation:
+            return JsonResponse(
+                "Bad Request - " + password_validation, status=400, safe=False
+            )
+
+        # Create user.
+        User.objects.create_user(
+            email=request.DATA["email"],
+            password=request.DATA["password"],
+            username=request.DATA["username"],
+            first_name=request.DATA["first_name"],
+            last_name=request.DATA["last_name"],
+            teacher_request=True
+            if request.DATA["is_teacher"].lower() == "true"
+            else False,
+        )
+        return JsonResponse("Created - User created.", status=201, safe=False)
+
+    return JsonResponse(
+        "Bad Request - Please provide the required json body.", status=400, safe=False
+    )
